Start working on a messages component.

--- a/web/pubspec.yaml
+++ b/web/pubspec.yaml
@@ -1,12 +1,10 @@
 name: 'github.daveshuckerow.chat.web'
-dependencies:
-  angular: any
-  github.daveshuckerow.chat.service:
-    path: ../service/
 environment:
   sdk: '>=1.19.0 <2.0.0'
 dependencies:
   angular2: ^2.2.0
+  github.daveshuckerow.chat.service:
+    path: ../service
 dev_dependencies:
   browser: ^0.10.0
   dart_to_js_script_rewriter: ^1.0.1
