--- a/web/pubspec.yaml
+++ b/web/pubspec.yaml
@@ -3,6 +3,7 @@ environment:
   sdk: '>=1.19.0 <2.0.0'
 dependencies:
   angular2: ^2.2.0
+  fixnum: any
   github.daveshuckerow.chat.service:
     path: ../service
 dev_dependencies:
